<resources>
    <string name="app_name">Pruebas tema 4</string>
    <string name="irActividad2">Actividad Bundle</string>
    <string name="soyPantalla2">Soy la actividad de paso de datos con Bundle</string>
    <string name="añadirBotones">Añadir Botón</string>
    <string name="botonAniadido">Botón añadido</string>
    <string name="ponerTexto">Pon un texto aquí</string>
    <string name="ponerNumero">Pon un número aquí</string>
    <string name="irActividad3">Actividad Permisos</string>
    <string name="noPuedoRestaurar">No puedo restaurar estos valores</string>
    <string name="opcion1">Opcion 1</string>
    <string name="opcion2">Opcion 2</string>
    <string name="pulsame">Pulsame!</string>
    <string name="llamadaDenegada">Me has denegado el permiso de llamar.
        No puedo hacer esto. Gestionalo desde ajustes->aplicaciones->pruebas
        tema 4->permisos</string>
    <string name="permisoDenegado">Permiso denegado: No puedes hacer esto.</string>
    <string name="irActividad4">Actividad LayoutInflater</string>
    <string name="irAArrayAdapter">Actividad ArrayAdapter</string>
    <string name="listaListView">Lista con ListView + Adapter Personalizado</string>
    <string name="listaArrayAdapter">Lista con ListView + ArrayAdapter</string>
    <string name="irActividadListView">Actividad ListView</string>
</resources>