<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActividadPrincipal">

    <TextView
        android:id="@+id/textViewTitulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textStyle="bold|italic"
        android:textSize="30sp"
        android:textColor="@color/purple_700"
        android:text="@string/app_name"

        app:layout_constraintEnd_toStartOf="@+id/botonAniadir"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/botonAniadir"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/añadirBotones"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewTitulo" />

    <EditText
        android:id="@+id/campoTexto"
        android:inputType="text"
        android:autofillHints="@string/ponerTexto"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:hint="@string/ponerTexto"
        app:layout_constraintEnd_toStartOf="@+id/campoNumero"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/botonAniadir" />

    <EditText
        android:id="@+id/campoNumero"
        android:layout_width="0dp"
        android:hint="@string/ponerNumero"
        android:autofillHints="@string/ponerNumero"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/campoTexto"
        app:layout_constraintTop_toBottomOf="@+id/botonAniadir" />

    <LinearLayout
        android:id="@+id/contenedor"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/purple_700"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/botones"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/campoNumero">

    </LinearLayout>

    <LinearLayout
        android:id="@+id/botones"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/contenedor">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/botonSiguienteActividad"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="siguienteActividad"
                android:text="@string/irActividad2" />

            <Button
                android:id="@+id/botonActividad3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="irAActividad3"
                android:text="@string/irActividad3" />

            <Button
                android:id="@+id/irActividad4"
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:onClick="irAActividad4"
                android:text="@string/irActividad4" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/irAActividaArrayAdapter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="irAActividadArrayAdapter"
                android:text="@string/irAArrayAdapter" />

            <Button
                android:id="@+id/botonActividadListView"
                android:onClick="irAActividadListView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/irActividadListView" />
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>